chore: update head of html, with preloads, etc

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Music diary to display my listening habits" />
+    <link rel="preload" as="style" href="screen.css" media="screen" />
+    <link rel="preload" as="script" href="scripts.js" />
     <link rel="stylesheet" type="text/css" href="screen.css" media="screen" />
-    <title>Rivet Head App</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <title>Rivet Head Music Diary</title>
   </head>
   <body>
     <header>
-      <h1>Rivet Head App</h1>
+      <h1>Rivet Head Music Diary</h1>
     </header>
     <main>
       <section>
