improvement: complete HTML document structure, add some content

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,40 +7,62 @@
     <link rel="preload" as="style" href="screen.css" media="screen" />
     <link rel="preload" as="script" href="scripts.js" />
     <link rel="stylesheet" type="text/css" href="screen.css" media="screen" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <title>Rivet Head Music Diary</title>
   </head>
   <body>
-    <header>
-      <h1>Rivet Head Music Diary</h1>
-    </header>
-    <main>
-      <section>
-        <article>
-          <h2>A Music Diary</h2>
-          <p>
-            Content coming soon...
-          </p>
-        </article>
-      </section>
-    </main>
-    <footer>
-      <section>
-        <p>
-          &copy; Jeffery D Mitchell | All Rights
-          Reserved
-        </p>
-        <p>
-          Github Repo is
-          <a
-            href="https://github.com/sentinel1909/rivet-head-app"
-            target="_blank"
-            rel="noreferrer"
-            >here</a
-          >
-        </p>
-      </section>
-    </footer>
+    <div id="fauxBody">
+      <header id="top">
+        <a href="./">
+          <h1>Rivet Head Music Diary</h1>
+        </a>
+      </header>
+      <main>
+        <section>
+          <p>What Have I Listened to Lately?</p>
+          <p>I commute daily on public transit. I'll typically listen to one album on the way in and another one the way home.</p>
+        </section>
+        <section id="january2024">
+          <header>
+            <h2>January 2024</h2>
+          </header>
+          <table>
+            <thead>
+              <tr>
+                <td>Day</td>
+                <td>Band</td>
+                <td>Album</td>
+                <td>Thoughts</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Monday the 1st</td>
+                <td>Judas Priest</td>
+                <td>Invincible Shield</td>
+                <td>Only two songs release, literally cannot wait for April for the full album.</td>
+              </tr>
+              <tr>
+                <td>Tuesday the 2nd</td>
+                <td>Metallica</td>
+                <td>72 Seasons</td>
+                <td>Their best, most consistent work in years, love it!</td>
+              </tr>
+              <tr>
+                <td>Wednesday the 3rd</td>
+                <td>Sabaton</td>
+                <td>Attero Dominatus</td>
+                <td>Love this album, so, so much. Was turned on to Sabaton in early 2021 by a co-worker.</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+      </main>
+      <footer>
+        <p>&copy; Jeffery D Mitchell</p>
+        <p><a href="https://github.com/sentinel1909/rivet-head-app" target="blank" rel="noreferrer">Rivet Head App Source</a></p>
+      </footer>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
