improvement: add accessibility features for diary table

--- a/assets/index.html
+++ b/assets/index.html
@@ -26,30 +26,30 @@
           <header>
             <h2>January 2024</h2>
           </header>
-          <table>
+          <table id="diaryTable">
             <thead>
               <tr>
-                <td>Day</td>
-                <td>Band</td>
-                <td>Album</td>
-                <td>Thoughts</td>
+                <th scope="col">Day</th>
+                <th scope="col">Band</th>
+                <th scope="col">Album</th>
+                <th scope="col">Thoughts</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Monday the 1st</td>
+                <th scope="row">Monday the 1st</th>
                 <td>Judas Priest</td>
                 <td>Invincible Shield</td>
                 <td>Only two songs release, literally cannot wait for April for the full album.</td>
               </tr>
               <tr>
-                <td>Tuesday the 2nd</td>
+                <th scope="row">Tuesday the 2nd</th>
                 <td>Metallica</td>
                 <td>72 Seasons</td>
                 <td>Their best, most consistent work in years, love it!</td>
               </tr>
               <tr>
-                <td>Wednesday the 3rd</td>
+                <th scope="row">Wednesday the 3rd</th>
                 <td>Sabaton</td>
                 <td>Attero Dominatus</td>
                 <td>Love this album, so, so much. Was turned on to Sabaton in early 2021 by a co-worker.</td>
