improvement: begin to implement card layout

--- a/assets/index.html
+++ b/assets/index.html
@@ -18,44 +18,38 @@
         </a>
       </header>
       <main>
+        <h3>January 2024</h3>
         <section>
-          <p>What Have I Listened to Lately?</p>
-          <p>I commute daily on public transit. I'll typically listen to one album on the way in and another one the way home.</p>
-        </section>
-        <section id="january2024">
-          <header>
-            <h2>January 2024</h2>
-          </header>
-          <table id="diaryTable">
-            <thead>
-              <tr>
-                <th scope="col">Day</th>
-                <th scope="col">Band</th>
-                <th scope="col">Album</th>
-                <th scope="col">Thoughts</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Monday the 1st</th>
-                <td>Judas Priest</td>
-                <td>Invincible Shield</td>
-                <td>Only two songs release, literally cannot wait for April for the full album.</td>
-              </tr>
-              <tr>
-                <th scope="row">Tuesday the 2nd</th>
-                <td>Metallica</td>
-                <td>72 Seasons</td>
-                <td>Their best, most consistent work in years, love it!</td>
-              </tr>
-              <tr>
-                <th scope="row">Wednesday the 3rd</th>
-                <td>Sabaton</td>
-                <td>Attero Dominatus</td>
-                <td>Love this album, so, so much. Was turned on to Sabaton in early 2021 by a co-worker.</td>
-              </tr>
-            </tbody>
-          </table>
+          <article>
+            <h4>Monday, January 1st</h4>
+            <p>Judas Priest</p>
+            <p>Invincible Shield</p>
+            <p>Two songs out so far, literally cannot wait for the full album in April</p>
+          </article>
+          <article>
+            <h4>Tuesday, January 2nd</h4>
+            <p>Metallica</p>
+            <p>72 Seasons</p>
+            <p>Their best, most consistent work in years.</p>
+          </article>
+          <article>
+            <h4>Wednesday, January 3rd</h4>
+            <p>Sabaton</p>
+            <p>Attero Dominatus</p>
+            <p>Introduced to Sabaton by a co-worker in early 2021, this is my favourite album by far.</p>
+          </article>
+          <article>
+            <h4>Thursday, January 4th</h4>
+            <p>Alice Cooper</p>
+            <p>Special Forces</p>
+            <p>Discovered this album early in 2021, after exploring new old things. So good, from front to back.</p>
+          </article>
+          <article>
+            <h4>Thursday, January 4th</h4>
+            <p>Danko Jones</p>
+            <p>Born a Lion</p>
+            <p>Had a brief obsession with these guys, a few years back. Their first album I found to be their best. Straight up crunchy riffs and great beat.</p>
+          </article>
         </section>
       </main>
       <footer>
