bug: fix header hierarchy in HTML

--- a/assets/index.html
+++ b/assets/index.html
@@ -17,36 +17,36 @@
           <h1>Rivet Head Music Diary</h1>
         </a>
       </header>
+      <h2>January 2024</h2>
       <main>
-        <h3>January 2024</h3>
         <section>
           <article>
-            <h4>Monday, January 1st</h4>
-            <p>Judas Priest</p>
+            <h3>Monday, January 1st</h3>
+            <h4>Judas Priest</h4>
             <p>Invincible Shield</p>
             <p>Two songs out so far, literally cannot wait for the full album in April</p>
           </article>
           <article>
-            <h4>Tuesday, January 2nd</h4>
-            <p>Metallica</p>
+            <h3>Tuesday, January 2nd</h3>
+            <h4>Metallica</h4>
             <p>72 Seasons</p>
             <p>Their best, most consistent work in years.</p>
           </article>
           <article>
-            <h4>Wednesday, January 3rd</h4>
-            <p>Sabaton</p>
+            <h3>Wednesday, January 3rd</h3>
+            <h4>Sabaton</h4>
             <p>Attero Dominatus</p>
             <p>Introduced to Sabaton by a co-worker in early 2021, this is my favourite album by far.</p>
           </article>
           <article>
-            <h4>Thursday, January 4th</h4>
-            <p>Alice Cooper</p>
+            <h3>Thursday, January 4th</h3>
+            <h4>Alice Cooper</h4>
             <p>Special Forces</p>
             <p>Discovered this album early in 2021, after exploring new old things. So good, from front to back.</p>
           </article>
           <article>
-            <h4>Thursday, January 4th</h4>
-            <p>Danko Jones</p>
+            <h3>Thursday, January 4th</h3>
+            <h4>Danko Jones</h4>
             <p>Born a Lion</p>
             <p>Had a brief obsession with these guys, a few years back. Their first album I found to be their best. Straight up crunchy riffs and great beat.</p>
           </article>
