improvement: state based UI, improved CSS layout

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
     <title>Rivet Head Music Diary</title>
   </head>
   <body>
-    <div id="fauxBody">
+    <div id="page-container">
       <header id="top">
         <a href="./">
           <h1>Rivet Head Music Diary</h1>
@@ -19,38 +19,7 @@
       </header>
       <h2>January 2024</h2>
       <main>
-        <section>
-          <article>
-            <h3>Monday, January 1st</h3>
-            <h4>Judas Priest</h4>
-            <p>Invincible Shield</p>
-            <p>Two songs out so far, literally cannot wait for the full album in April</p>
-          </article>
-          <article>
-            <h3>Tuesday, January 2nd</h3>
-            <h4>Metallica</h4>
-            <p>72 Seasons</p>
-            <p>Their best, most consistent work in years.</p>
-          </article>
-          <article>
-            <h3>Wednesday, January 3rd</h3>
-            <h4>Sabaton</h4>
-            <p>Attero Dominatus</p>
-            <p>Introduced to Sabaton by a co-worker in early 2021, this is my favourite album by far.</p>
-          </article>
-          <article>
-            <h3>Thursday, January 4th</h3>
-            <h4>Alice Cooper</h4>
-            <p>Special Forces</p>
-            <p>Discovered this album early in 2021, after exploring new old things. So good, from front to back.</p>
-          </article>
-          <article>
-            <h3>Thursday, January 4th</h3>
-            <h4>Danko Jones</h4>
-            <p>Born a Lion</p>
-            <p>Had a brief obsession with these guys, a few years back. Their first album I found to be their best. Straight up crunchy riffs and great beat.</p>
-          </article>
-        </section>
+        <section id="cards"></section>
       </main>
       <footer>
         <p>&copy; Jeffery D Mitchell</p>
